--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   max-width: 1280px;
+  width: 100vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -18,25 +19,177 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+#gw-top {
+  position: relative;
+}
+
+#gw-logo {
+  width: 50vw;
+  max-width: 400px;
+  margin: auto;
+  cursor: pointer;
+}
+
+#gw-logo img {
+  width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
+#gw-logo div {
+  display: inline-block;
+}
+
+.gw-btn-connect {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+#gw-social .wkit-button {
+  margin: 8px auto;
+  width: auto;
+}
+
+#gw-social * {
+  color: white;
+}
+
+#gw-social .wkit-connected-container {
+  margin: 8px auto;
+}
+
+#game-view {
+  position: relative;
+}
+
+#gw-btn-start-game {
+  position: absolute;
+  top: 40%;
+  bottom: 40%;
+  left: 40%;
+  right: 40%;
+  font-size: xx-large;
+}
+
+.game-window {
+  max-width: 640px;
+  max-height: 480px;
+  width: 80vw;
+  height: 60vw;
+  outline: 4px solid #ffffff;
+  border: 0px;
+}
+
+#gw-middle {
+  position: relative;
+  /* background-color: #747bff; */
+  width: 100%;
+}
+
+#gw-btn-coke {
+  position: absolute;
+  right: 12vw;
+  top: 20px;
+}
+
+#gw-btn-axe {
+  position: absolute;
+  right: 12vw;
+  top: 80px;
+}
+
+#qw-qrcode {
+  width: 200px;
+  height: 200px;
+}
+
+#gw-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  background-color: black;
+}
+
+#gw-footer * {
+  display: inline-block;
+  text-align: justify;
+}
+
+#gw-copyright {
+  margin-left: 0;
+}
+
+#gw-godot {
+  margin: 0;
+}
+
+#gw-godot img {
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  padding: 0 !important;
+  margin-bottom: -4px !important;
+  margin-left: 10px !important;
+  margin-right: 10px !important;
+}
+
+.gw-hide {
+  display: none;
+}
+
+.gw-popup {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.gw-popup-inner {
+  width: 400px;
+  height: 240px;
+  display: inline-block;
+  margin: auto;
+  margin-top: calc(45vh - 120px);
+  background-color: black;
+  border: 4px solid white;
+}
+
+.gw-popup-inner span {
+  color: greenyellow;
+}
+
+.gw-popup-inner img {
+  display: block;
+  margin: 0 auto 20px auto;
+  height: 60px;
+}
+
+.gw-popup-inner button {
+  margin: 0 10px;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
