--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
+@font-face {
+  font-family: "zpix";
+  src: local("zpix"), url("/font/zpix.ttf") format("truetype");
+  font-weight: bold;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: zpix, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: dark;
+  color: rgba(255, 255, 255, 1);
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,11 +22,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: greenyellow;
   text-decoration: inherit;
+  cursor: pointer;
 }
 a:hover {
-  color: #535bf2;
+  color: #88ff64;
 }
 
 body {
@@ -29,41 +36,32 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #000000;
 }
 
 h1 {
+  display: inline-block;
   font-size: 3.2em;
   line-height: 1.1;
+  font-weight: 900;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  color: white !important;
+  border-radius: 0 !important;
+  border: 4px solid white !important;
+  padding: 0.6em 1.2em !important;
+  font-size: 1em !important;
+  font-weight: 900 !important;
+  font-family: inherit !important;
+  background-color: #000 !important;
+  cursor: pointer !important;
+  transition: border-color 0.25s !important;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: greenyellow !important;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
