--- a/src/App.css
+++ b/src/App.css
@@ -1,195 +1,56 @@
-#root {
-  max-width: 1280px;
+.container {
+  position: relative;
   width: 100vw;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-.card {
-  padding: 2em;
+.background {
+  position: absolute;
+  top: -10%;
+  /* These offsets are for the parallax effect */
+  left: -10%;
+  width: 120%;
+  height: 120%;
+  background-image: url('path-to-your-background-image.jpg');
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
+  pointer-events: none;
 }
 
-.read-the-docs {
-  color: #888;
-}
-
-#gw-top {
+.content {
   position: relative;
-}
-
-#gw-logo {
-  width: 50vw;
-  max-width: 400px;
-  margin: auto;
-  cursor: pointer;
-}
-
-#gw-logo img {
   width: 100%;
-  height: auto;
-  margin: 0;
-  padding: 0;
+  height: 100%;
+  z-index: 2;
 }
 
-#gw-logo div {
-  display: inline-block;
+.screenshots {
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  /* Add styles for the layered screenshots as needed */
 }
 
-.gw-btn-connect {
-  display: inline-block;
-  margin: 0 10px;
-}
-
-#gw-social .wkit-button {
-  margin: 8px auto;
-  width: auto;
-}
-
-#gw-social * {
+.text {
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  font-size: 3em;
   color: white;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
-#gw-social .wkit-connected-container {
-  margin: 8px auto;
-}
-
-#game-view {
-  position: relative;
-}
-
-#gw-btn-start-game {
+.bar {
   position: absolute;
-  top: 40%;
-  bottom: 40%;
-  left: 40%;
-  right: 40%;
-  font-size: xx-large;
-}
-
-.game-window {
-  max-width: 640px;
-  max-height: 480px;
-  width: 80vw;
-  height: 60vw;
-  outline: 4px solid #ffffff;
-  border: 0px;
-}
-
-#gw-middle {
-  position: relative;
-  /* background-color: #747bff; */
+  bottom: 0;
+  left: 0;
   width: 100%;
-}
-
-#gw-btn-coke {
-  position: absolute;
-  right: 12vw;
-  top: 20px;
-}
-
-#gw-btn-axe {
-  position: absolute;
-  right: 12vw;
-  top: 80px;
-}
-
-#qw-qrcode {
-  width: 200px;
-  height: 200px;
-}
-
-#gw-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  background-color: black;
-}
-
-#gw-footer * {
-  display: inline-block;
-  text-align: justify;
-}
-
-#gw-copyright {
-  margin-left: 0;
-}
-
-#gw-godot {
-  margin: 0;
-}
-
-#gw-godot img {
-  width: 20px;
-  height: 20px;
-  margin: 0;
-  padding: 0 !important;
-  margin-bottom: -4px !important;
-  margin-left: 10px !important;
-  margin-right: 10px !important;
-}
-
-.gw-hide {
-  display: none;
-}
-
-.gw-popup {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.gw-popup-inner {
-  width: 400px;
-  height: 240px;
-  display: inline-block;
-  margin: auto;
-  margin-top: calc(45vh - 120px);
-  background-color: black;
-  border: 4px solid white;
-}
-
-.gw-popup-inner span {
-  color: greenyellow;
-}
-
-.gw-popup-inner img {
-  display: block;
-  margin: 0 auto 20px auto;
-  height: 60px;
-}
-
-.gw-popup-inner button {
-  margin: 0 10px;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  height: 50px;
+  /* Adjust based on the height of your bar */
+  background-image: url('path-to-your-bar-image.png');
+  background-size: cover;
 }
