--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   font-family: "Montserrat", sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-style: italic;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
