--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,4 +10,65 @@
   font-size: 24px;
   font-weight: 700;
   line-height: 80%; /* 19.2px */
+
+  /* background-color: magenta; */
+
+  background: rgba(0, 0, 0, 0.1);
+  background-blend-mode: soft-light;
+  backdrop-filter: blur(24px);
+  height: 48px;
+  width: 100%;
+}
+
+.footer-container {
+  height: 100%;
+  margin: 0 100px;
+
+  /* background-color: mediumaquamarine; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#footer-logo {
+  position: relative;
+  height: 28px;
+}
+
+.footer-line {
+  height: 28px;
+  margin: 10px 20px;
+}
+
+#footer-twitter {
+  display: flex;
+  flex-direction: row;
+
+  padding: 21px 0px;
+  align-items: center;
+  gap: 12px;
+  text-decoration: none;
+}
+
+#footer-twitter img {
+  height: 28px;
+}
+
+#footer-twitter h5 {
+  color: #fff;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 80%; /* 25.6px */
+}
+
+#footer-copyright {
+  flex-grow: 1;
+  text-align: right;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 80%; /* 19.2px */
 }
