--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,12 @@
 #root {
   max-width: 1280px;
   width: 100vw;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
+}
+
+#bg-front {
+  min-width: 100vw;
+  min-height: 100vh;
 }
