--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,52 @@
   min-width: 100vw;
   min-height: 100vh;
 }
+
+.cards {
+  position: fixed !important;
+  background-color: tomato;
+  margin: 0;
+  padding: 0;
+  top: calc(50vh - 256px - 24px);
+  right: 50%;
+}
+
+.card {
+  /* opacity: 0.3; */
+  position: absolute !important;
+  right: 0;
+  top: 0;
+  border-radius: 24px;
+  border: 1px solid #fff;
+  box-shadow: 0px 0px 72px 0px rgba(0, 0, 0, 0.7), 0px 0px 12px 0px rgba(0, 0, 0, 0.35);
+}
+
+#card-1 {
+  right: 0;
+  top: 0;
+  width: 512px;
+}
+
+#card-2 {
+  right: 72px;
+  top: 24px;
+  width: 464px;
+}
+
+#card-3 {
+  right: 144px;
+  top: 48px;
+  width: 416px;
+}
+
+#card-4 {
+  right: 216px;
+  top: 72px;
+  width: 368px;
+}
+
+#card-5 {
+  right: 288px;
+  top: 96px;
+  width: 320px;
+}
