--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   margin: 0;
   padding: 0;
   top: calc(50vh - 256px - 24px);
-  right: 50%;
+  right: 52%;
 }
 
 .card {
@@ -65,4 +65,78 @@
   right: 288px;
   top: 96px;
   width: 320px;
+}
+
+.titles {
+  position: fixed !important;
+  /* background-color: tomato; */
+  margin: 0;
+  padding: 0;
+  top: calc(50vh - 256px - 24px);
+  left: 52%;
+  text-align: left !important;
+}
+
+.titles h2 {
+  border-radius: 12px;
+  background: #000;
+  padding-left: 20px;
+  color: #fff;
+  font-size: 56px;
+  font-weight: 500;
+  line-height: 100%; /* 56px */
+  width: fit-content !important;
+  margin: 20px 0;
+}
+
+.titles h1 {
+  border-radius: 12px;
+  background: #000;
+  padding-left: 20px;
+  color: #fff;
+  font-size: 72px;
+  font-weight: 500;
+  line-height: 100%; /* 56px */
+  text-align: left !important;
+  width: fit-content !important;
+  margin: 20px 0;
+}
+
+.titles h1 span {
+  background: linear-gradient(90deg, #0ff 0%, #0f0 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.sub-title {
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #000;
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 200%; /* 36px */
+
+  width: fit-content !important;
+  margin-top: 40px;
+
+  border-radius: 12px;
+  background: linear-gradient(90deg, #0ff 0%, #0f0 100%);
+}
+
+.btc-play {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 150%; /* 72px */
+
+  width: fit-content !important;
+  margin-top: 60px;
+  padding: 16px 36px;
+
+  border-radius: 24px;
+  border: 2px solid rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.12);
+  backdrop-filter: blur(4px);
 }
