--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
  * @author endaye
  */
 
- #root {
+#root {
   max-width: 1280px;
   width: 100vw;
   margin: 0;
@@ -25,7 +25,7 @@
   padding: 0;
   top: calc(50vh - 360px - 24px);
   right: 52%;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .card {
@@ -108,4 +108,32 @@
   border: 2px solid rgba(255, 255, 255, 0.4);
   background: rgba(255, 255, 255, 0.12);
   backdrop-filter: blur(4px);
+}
+
+@media screen and (min-width: 1441px) {
+  :root {
+    zoom: 0.8;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+  :root {
+    zoom: 0.6;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  :root {
+    zoom: 0.4;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  :root {
+    zoom: 0.8;
+  }
+
+  .cards {
+    display: none;
+  }
 }
