--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,29 @@
  */
 
 #root {
-  max-width: 1280px;
-  width: 100vw;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  min-width: 100vw;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   text-align: center;
+  background-color: #0f0;
 }
 
 #bg-front {
-  min-width: 100vw;
-  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: -200%;
+  right: -200%;
+  min-width: 100%;
+  min-height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cards {
