--- a/src/App.css
+++ b/src/App.css
@@ -33,11 +33,13 @@
 
 .cards {
   position: fixed !important;
-  background-color: tomato; /* You might want to remove this once design is finalized */
-  margin: 0;
-  padding: 0;
-  top: calc(50vh - 360px - 24px);
-  right: 52%;
+  top: 0;
+  bottom: 0;
+  right: 50%;
+  /* background-color: tomato;  */
+  margin: auto;
+  width: 720px;
+  height: 720px;
   cursor: pointer;
 }
 
@@ -54,12 +56,16 @@
 
 .titles {
   position: fixed !important;
-  margin: 0;
-  padding: 0;
-  top: calc(50vh - 256px - 24px);
-  left: 52%;
+  top: 0;
+  bottom: 0;
+  left: 56%;
+  margin: auto;
+  padding: auto;
+  padding-top: 5%;
+  height: 720px;
   text-align: left !important;
   cursor: default;
+  /* background-color: tomato; */
 }
 
 .titles h2 {
