--- a/src/App.css
+++ b/src/App.css
@@ -150,45 +150,49 @@
   border-radius: 12px;
 }
 
-.btc-play {
-  color: rgba(255, 255, 255, 0.8);
+.btn-play {
+  color: rgba(255, 255, 255, 1);
   font-size: 48px;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 150%;
   width: fit-content !important;
   margin-top: 60px;
   padding: 16px 36px;
   cursor: pointer;
   border-radius: 24px;
-  border: 2px solid rgba(255, 255, 255, 0.4);
-  background: rgba(255, 255, 255, 0.12);
+  border: 4px solid rgba(255, 255, 255, 0.64);
   backdrop-filter: blur(4px);
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease;
 }
 
-.btc-play:hover {
-  color: rgba(255, 255, 255, 1);
-  border: 2px solid rgba(255, 255, 255, 0.8);
+.btn-play:hover {
+  border: 4px solid rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 64);
 }
 
-.btc-play-gradient-0 {
-  background: linear-gradient(90deg, rgb(0, 255, 255) 0%, rgb(0, 255, 0) 100%);
+.btn-play-gradient-0 {
+  transition: all 0.5s ease;
+  background: linear-gradient(90deg, rgba(0, 255, 255, 0.64) 0%, rgba(0, 255, 0, 0.64) 100%);
 }
 
-.btc-play-gradient-1 {
-  background: linear-gradient(90deg, rgb(253, 148, 255) 0%, rgb(86, 255, 255) 100%);
+.btn-play-gradient-1 {
+  transition: all 0.5s ease;
+  background: linear-gradient(90deg, rgba(253, 148, 255, 0.64) 0%, rgba(86, 255, 255, 0.64) 100%);
 }
 
-.btc-play-gradient-2 {
-  background: linear-gradient(90deg, rgb(255, 222, 157) 0%, rgb(0, 255, 255) 100%);
+.btn-play-gradient-2 {
+  transition: all 0.5s ease;
+  background: linear-gradient(90deg, rgba(255, 222, 157, 0.64) 0%, rgba(0, 255, 255, 0.64) 100%);
 }
 
-.btc-play-gradient-3 {
-  background: linear-gradient(90deg, rgb(255, 212, 147) 0%, rgb(255, 86, 86) 100%);
+.btn-play-gradient-3 {
+  transition: all 0.5s ease;
+  background: linear-gradient(90deg, rgba(255, 212, 147, 0.64) 0%, rgba(255, 86, 86, 0.64) 100%);
 }
 
-.btc-play-gradient-4 {
-  background: linear-gradient(90deg, rgb(252, 112, 255) 0%, rgb(255, 208, 86) 100%);
+.btn-play-gradient-4 {
+  transition: all 0.5s ease;
+  background: linear-gradient(90deg, rgba(252, 112, 255, 0.64) 0%, rgba(255, 208, 86, 0.64) 100%);
 }
 
 @media screen and (min-width: 1601px) {
