--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@
   box-shadow: 0px 0px 72px 0px rgba(0, 0, 0, 0.7), 0px 0px 12px 0px rgba(0, 0, 0, 0.35);
   will-change: transform;
   transition: transform 0.5s ease;
+  width: 100%;
 }
 
 .titles {
@@ -67,7 +68,7 @@
   margin: auto;
   padding: auto;
   padding-top: 5%;
-  height: 720px;
+  height: calc(720px * var(--zoom));
   text-align: left !important;
   cursor: default;
   /* background-color: tomato; */
