--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,9 +5,10 @@
 
 .header {
   position: fixed;
-  bottom: 0;
+  top: 0;
+  z-index: 100;
 
-  /* background-color: magenta; */
+  background-color: magenta;
 
   background: rgba(0, 0, 0, 0.1);
   background-blend-mode: soft-light;
@@ -24,7 +25,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -34,9 +35,8 @@
   height: calc(42px * var(--zoom));
 }
 
-.header-line {
-  height: calc(28px * var(--zoom));
-  margin: calc(10px * var(--zoom)) calc(36px * var(--zoom));
+.header-space {
+  flex-grow: 2;
 }
 
 .header-social {
@@ -63,16 +63,6 @@
   font-style: normal;
   font-weight: 500;
   line-height: 80%; /* 25.6px */
-}
-
-#header-copyright {
-  flex-grow: 1;
-  text-align: right;
-  color: #fff;
-  font-size: calc(18px * var(--zoom));
-  font-weight: 700;
-  line-height: 80%; /* 19.2px */
-  cursor: default;
 }
 
 @media screen and (min-width: 1601px) {
