--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,7 +12,7 @@
   background: rgba(0, 0, 0, 0.1);
   background-blend-mode: soft-light;
   backdrop-filter: blur(24px);
-  height: calc(84px * var(--zoom));
+  height: calc(42px * var(--zoom));
   width: 100%;
 }
 
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
@@ -66,7 +66,6 @@
 }
 
 #footer-copyright {
-  flex-grow: 1;
   text-align: right;
   color: #fff;
   font-size: calc(18px * var(--zoom));
